#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

# initialize autoconf
#####################
AC_PREREQ([2.65])				# minimum autoconf version

# supply the name of the project, version number, and contact email
AC_INIT([asptools], [1.28], [tomi.janhunen@tuni.fi])

AC_CONFIG_SRCDIR([src/scc.c])		# source directory
AC_CONFIG_HEADERS([config.h])			# name of generated header
AC_CONFIG_MACRO_DIR([m4])			# folder for autoconf macros
AC_CONFIG_AUX_DIR([build-aux])			# folder for auxilliary files

# initialize automake with the following options:
#################################################
#   subdir-objects:
#	tell automake to create object files in same directory as the source
AM_INIT_AUTOMAKE([1.14 subdir-objects])
#   tell automake not to be verbose when compiling
AM_SILENT_RULES([yes])

# enable libtool to build libraries
###################################

# define needed variables
#########################

# check that relevant programs are present on the system and enable them
########################################################################
AC_LANG([C])			# check for C support
AC_PROG_CC			# check for C compiler support
AC_PROG_INSTALL			# check for 'install'
AC_PROG_LN_S			# check for 'ln -s'

# check for specific, required compiler/preprocessor characteristics
####################################################################

# define optional features (--enable-FEATURE)
#############################################


# define optional packages to use (--with-PACKAGE)
##################################################
AC_ARG_WITH([planar],
	    [AS_HELP_STRING([--with-planar],
			    [compile the planar program (needs Stanford GraphBase)])
	    ],
	    [],
	    [with_planar=no])

# definitions for config.h (the header file generated by the configure script)
##############################################################################

# check that libraries are present on the system
################################################
# asplib (liblp)
AC_CHECK_LIB([lp], [_version], [], [AC_MSG_FAILURE([asplib (liblp) not found])])
AC_CHECK_HEADER([liblp/version.h], [], [AC_MSG_FAILURE([asplib (liblp) headers not found])])

# Stanford GraphBase
AS_IF([test "x$with_planar" != xno],
	[
		AC_CHECK_LIB([gb], [random_graph], [], [AC_MSG_FAILURE([--with-planar was given, but Stanford GraphBase lib not found])])
       		AC_CHECK_HEADER([gb_basic.h], [], [AC_MSG_FAILURE([--with-planar was given, but Stanford GraphBase headers not found])])
		AC_DEFINE([HAVE_LIBGB], [1], [Define if you have Stanford GraphBase])
	])

# checks for C header files
###########################

# checks for typedefs and structures
####################################

# checks for standard library functions
#######################################
#AC_CHECK_FUNCS([...])

# pass information to automake
##############################
AM_CONDITIONAL([WITH_PLANAR], [test "x$with_planar" = xyes])

# tell autoconf which files will be generated by it
###################################################
AC_CONFIG_FILES([Makefile])

# generate the config.status script and use it to generate the config files
###########################################################################
AC_OUTPUT
